These are my news app html files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NewzBox</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="icon/app-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="manifest" href="./manifest.json">
 </head>
@@ -25,10 +26,10 @@
             </form>
             <form class="navbar-form navbar-right" action="/action_page.php">
                 <div class="form-group">
-                    <a href="../API2/index.html" class="btn btn-sm btn-primary">API 2 <i class="glyphicon glyphicon-send"></i> </a>
-                    <a href="../API3/index.html" class="btn btn-sm btn-success">API 3 <i class="glyphicon glyphicon-send"></i> </a>
-                    <a href="../API4/index.html" class="btn btn-sm btn-info">API 4 <i class="glyphicon glyphicon-send"></i> </a>
-                    <a href="../API5/index.html" class="btn btn-sm btn-warning">API 5 <i class="glyphicon glyphicon-send"></i> </a>                    
+                    <a href="api2.html" class="btn btn-sm btn-primary">API 2 <i class="glyphicon glyphicon-send"></i> </a>
+                    <a href="api3.html" class="btn btn-sm btn-success">API 3 <i class="glyphicon glyphicon-send"></i> </a>
+                    <a href="api4.html" class="btn btn-sm btn-info">API 4 <i class="glyphicon glyphicon-send"></i> </a>
+                    <a href="api5.html" class="btn btn-sm btn-warning">API 5 <i class="glyphicon glyphicon-send"></i> </a>                    
                 </div>
             </form>
         </div>
